infra/terraform/main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 4.16"
    }
  }

  required_version = ">= 1.2.0"
}

provider "aws" {
  profile = "default"
  region  = "ap-northeast-2"
}

resource "aws_instance" "dev_app_server" {
  ami                    = "ami-0ea5eb4b05645aa8a"
  instance_type          = "t2.micro"
  key_name               = aws_key_pair.pk_key_pair.key_name
  vpc_security_group_ids = [aws_security_group.dev_security_group.id, aws_security_group.dev_app_security_group.id]

  tags = {
    Name = "DevAppServer"
  }
}

resource "aws_instance" "dev_nginx_server" {
  ami                    = "ami-0ea5eb4b05645aa8a"
  instance_type          = "t2.micro"
  key_name               = aws_key_pair.pk_key_pair.key_name
  vpc_security_group_ids = [aws_security_group.dev_security_group.id, aws_security_group.dev_nginx_security_group.id]

  tags = {
    Name = "DevNginxServer"
  }
}

output "dev_app_server_public_ip" {
  description = "Public IP address of DevAppServer"
  value       = aws_instance.dev_app_server.public_ip
}

output "dev_nginx_server_public_ip" {
  description = "Public IP address of DevNginxServer"
  value       = aws_instance.dev_nginx_server.public_ip
}

resource "aws_security_group" "dev_security_group" {
  egress = [
    {
      cidr_blocks      = ["0.0.0.0/0", ]
      description      = "to all"
      from_port        = 0
      ipv6_cidr_blocks = []
      prefix_list_ids  = []
      protocol         = "-1"
      security_groups  = []
      self             = false
      to_port          = 0
    }
  ]

  ingress = [
    {
      cidr_blocks      = ["0.0.0.0/0", ]
      description      = "ssh"
      from_port        = 22
      ipv6_cidr_blocks = []
      prefix_list_ids  = []
      protocol         = "tcp"
      security_groups  = []
      self             = false
      to_port          = 22
    }
  ]
}

resource "aws_security_group" "dev_app_security_group" {
  ingress = [
    {
      cidr_blocks      = ["0.0.0.0/0", ]
      description      = "Spring default port"
      from_port        = 8080
      ipv6_cidr_blocks = []
      prefix_list_ids  = []
      protocol         = "tcp"
      security_groups  = []
      self             = false
      to_port          = 8080
    }
  ]
}

resource "aws_security_group" "dev_nginx_security_group" {
  ingress = [
    {
      cidr_blocks      = ["0.0.0.0/0", ]
      description      = "http"
      from_port        = 80
      ipv6_cidr_blocks = []
      prefix_list_ids  = []
      protocol         = "tcp"
      security_groups  = []
      self             = false
      to_port          = 80
    },
    {
      cidr_blocks      = ["0.0.0.0/0", ]
      description      = "https"
      from_port        = 443
      ipv6_cidr_blocks = []
      prefix_list_ids  = []
      protocol         = "tcp"
      security_groups  = []
      self             = false
      to_port          = 443
    }
  ]
}

variable "generated_key_name" {
  type        = string
  default     = "pk-key"
  description = "Key-pair generated by Terraform"
}

resource "tls_private_key" "ssh" {
  algorithm = "RSA"
  rsa_bits  = 4096
}

resource "aws_key_pair" "pk_key_pair" {
  key_name   = "pk-key"
  public_key = tls_private_key.ssh.public_key_openssh

  provisioner "local-exec" {
    command = <<-EOT
      echo '${tls_private_key.ssh.private_key_pem}' > ./'${var.generated_key_name}'.pem
      chmod 400 ./'${var.generated_key_name}'.pem
    EOT
  }
}
